updated to v7.4.0